# glm_cc_chess

./: .gitignore  CLAUDE.md  GLM_CC_Chess.spec  README.md  package.py  prompt.md  prompt2_lichess_bot.md  prompt_lichess_bot.md  pyproject.toml  requirements.txt
.claude/PRPs/plans/completed/: ai-vs-lichess-gui-integration.plan.md
.claude/PRPs/reports/: ai-vs-lichess-gui-integration-report.md
.claude/PRPs/reviews/: local-ai-vs-lichess-review.md
glm_cc_chess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lichess/: README_LICHESS.md  config.yml.example  run_engine.bat
release/: readme.txt
src/: board.py  clipboard_util.py  engine.py  game.py  gui.py  gui_textinput.py  lichess_client.py  lichess_controller.py  main.py  moves.py  uci.py
tests/: test_board.py  test_clipboard.py  test_engine.py  test_game.py  test_lichess.py  test_moves.py  test_uci.py
